# 23-11Beavers

./: README.md  cargo.toml
demos/faucet/: Cargo.toml  README.md  ambient.toml
demos/faucet/src/: client.rs  server.rs
demos/hubbub/: Cargo.toml  ambient.toml  readme.md
demos/hubbub/assets/: pipeline.toml
demos/hubbub/src/: client.rs  server.rs
demos/powerwidget_demo/: Cargo.toml  ambient.toml
demos/powerwidget_demo/src/: server.rs
demos/very_simple_jumper/: Cargo.toml  ambient.toml  readme.md
demos/very_simple_jumper/assets/: pipeline.toml
demos/very_simple_jumper/src/: client.rs  server.rs
subpax/hubbub_subhub/: Cargo.toml  ambient.toml  readme.md
subpax/hubbub_subhub/src/: client.rs
subpax/jellybean/: ambient.toml
subpax/pixie/: ambient.toml
subpax/pixie/src/: client.rs
subpax/powerwidget/: Cargo.toml  ambient.toml  readme.md
subpax/powerwidget/src/: client.rs  server.rs
